refs dspace97: added more memory to java when doing api ingest