@@ -18,4 +18,13 @@ if [ ! -f "$IMPORT_SITE_AIP" ]; then
     exit 1
 fi
 
+export JAVA_OPTS="\
+-Xms2048m \
+-Xmx4096m \
+-XX:PermSize=256m \
+-XX:MaxPermSize=512m"
+
 $DSPACE_HOME_DIR/run/bin/dspace packager -r -a -f -t AIP -e $EMAIL -i $DSPACE_SITE_HANDLE "$IMPORT_SITE_AIP"
+
+echo "If the import was not clean, make sure to run to reset:"
+echo "   $DSPACE_HOME_DIR/run/bin/dspace cleanup -v"
